--- a/.jsbeautifyrc
+++ b/.jsbeautifyrc
@@ -1,16 +1,18 @@
 {
   "brace_style": "collapse",
   "break_chained_methods": false,
+  "end_with_newline": true,
   "eval_code": false,
   "indent_char": " ",
   "indent_level": 0,
-  "indent_size": 4,
+  "indent_size": 2,
   "indent_with_tabs": false,
-  "jslint_happy": true,
+  "jslint_happy": false,
   "keep_array_indentation": false,
   "keep_function_indentation": false,
   "max_preserve_newlines": 2,
   "preserve_newlines": true,
+  "space_after_anon_function": true,
   "space_before_conditional": true,
   "unescape_strings": false,
   "wrap_line_length": 0
